# noria

./: .gitignore  Cargo.toml  UDF.org  click_ana.ohuac  click_ana.rs  clickstream.sql  composition.ohuac  lobsters_replying_comments.hs  lobsters_replying_comments.ohuaml  making-new-op.md  replying_comments.ohuac  setup-and-run-benchmark.sh
noria-benchmarks/: Cargo.toml
noria-benchmarks/clickstream/: main.rs
noria-benchmarks/lobsters/: Cargo.toml
noria-benchmarks/lobsters/db-schema/: ohua.sql
noria-benchmarks/lobsters/src/: main.rs
noria-benchmarks/piazza/: main.rs
noria-server/dataflow/src/: fns.rs  lib.rs  prelude.rs  processing.rs
noria-server/mir/src/: lib.rs  node.rs  query.rs  visualize.rs
noria-server/src/: click_ana.sql  handle.rs  lib.rs
noria-server/src/controller/: inner.rs  mir_to_flow.rs  mod.rs  schema.rs
noria/src/: controller.rs  data.rs  lib.rs
server/src/: lib.rs
udf-benchmarks/: Cargo.toml  Runner.hs  avg.ohuac  click_ana.ohuac  gen_data.ml  sum_count.ohuac
udf-benchmarks/avg/: check-conf  conf  conf.csv  conf.toml
udf-benchmarks/avg-split-domain/: conf.csv  conf.lookups.csv  conf.toml  four-domains.toml  native.sql  ohua.sql  one-domain.toml  two-domains.toml
udf-benchmarks/clickstream-evo/: check-conf  conf  conf.csv  full_ohua.sql  manual.sql  partial_ohua.sql  pure_sql.sql  verify.toml
udf-benchmarks/clickstream-sharding/: conf  conf.csv  conf.toml
udf-benchmarks/features/: main.rs  redesign.rs
udf-benchmarks/lobsters/: main.rs  repl_comm.sql  tables.sql
udf-benchmarks/read_a_lot/: main.rs
udf-benchmarks/redesign/: conf-econf.toml  conf.toml  query.sql
udf-benchmarks/sum-comp/: conf.csv  conf.toml  ohua.sql  scale-selectable.econf  sql.sql
udf-benchmarks/sum-count/: ohua.sql  sql.sql
(+87 files in other folders)
