[package]
name = "udf-benchmarks"
version = "0.0.1"
authors = ["Justus Adam"]
edition = "2018"
publish = false

[dependencies]
noria = { path = "../server", package = "noria-server" }
nom-sql = "0.0.11"
slog = "2.4.0"
slog-term = "2.4.0"
zookeeper = "0.5.3"
clap = "2.25.0"
toml = "0.5.3"
serde = { version = "1.0.8", features = ["derive"] }
serde_derive = "1.0.8"
rand = "0.6"
tokio = { version = "0.2.19", features = ["macros"] }
futures = "0.1.14"
chrono = "0.4"
failure = "0.1.1"

[[bin]]
name = "features"
path = "features/main.rs"

[[bin]]
name = "sir-read-a-lot"
path = "read_a_lot/main.rs"

[[bin]]
name = "lobsters-test"
path = "lobsters/main.rs"